<resources>
    <string name="app_name">AgeInMinutes</string>
    <string name="calculate_your">CALCULATE YOUR</string>
    <string name="age">AGE</string>
    <string name="in_minutes">IN MINUTES</string>
    <string name="selected_date">Selected Date</string>
    <string name="in_minutes_till_date">In minutes till date</string>
    <string name="select_your_birthday">Select your birthday</string>
</resources>